--- a/client/package.json
+++ b/client/package.json
@@ -8,16 +8,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mieweb/ui": "^0.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@mieweb/ui": "^0.1.0"
+    "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.2.1",
+    "sass": "^1.69.5",
     "typescript": "^5.3.3",
-    "vite": "^5.0.8",
-    "sass": "^1.69.5"
+    "vite": "^5.0.8"
   }
 }
