feat: serve client from Express in production (single service)
- Express server serves client/dist static files when available
- Add SPA fallback to serve index.html for all non-API routes
- Add 'npm run start' to run production server
- Add 'npm run prod' to build and start in one command

Development mode unchanged: still runs both services for hot reload

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
     "build": "npm run build --workspaces",
     "build:server": "npm run build --workspace=server",
-    "build:client": "npm run build --workspace=client"
+    "build:client": "npm run build --workspace=client",
+    "start": "npm run start --workspace=server",
+    "prod": "npm run build && npm run start"
   },
   "keywords": ["transcription", "audio", "video", "assemblyai"],
   "author": "",
