--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "dev:server": "npm run dev --workspace=server",
     "dev:client": "npm run dev --workspace=client",
-    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
+    "dev": "bash scripts/check-dev-mode.sh && concurrently \"npm run dev:server\" \"npm run dev:client\"",
     "build": "npm run build --workspaces",
     "build:server": "npm run build --workspace=server",
     "build:client": "npm run build --workspace=client",
