Refactor to artipod folder structure with redesigned landing page
- Rename uploads/ to artipods/ with UUID-based folder structure
- Each artipod folder contains: media file, thumbnail.png, future assets
- Update all API endpoints to use artipodId instead of filename
- Add /api/artipod/:artipodId endpoint for fetching artipod info
- Keep legacy /api/file/:filename routes for backward compatibility
- Update FeaturedPulse interface to use artipodId
- Add legacy format migration support in featured.ts

Landing page redesign:
- Add sticky banner with PulseClip branding and nav links
- Featured pulses displayed prominently in responsive grid
- Compact upload section with smaller drag/drop area
- Updated feature cards: Transcribed Instantly, Word-Level Editing, Edit Like Text
- Update README.md and IMPLEMENTATION.md with new structure

--- a/.gitignore
+++ b/.gitignore
@@ -139,7 +139,7 @@ vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 
 # Project specific
-server/uploads/
+server/artipods/
 server/cache/
 server/dist/
 client/dist/
